Automate build number update. Fix text wrap in Stats and PostActions.

--- a/src/features/post/actions/PostActions.module.css
+++ b/src/features/post/actions/PostActions.module.css
@@ -2,7 +2,7 @@
   display: flex;
 
   color: var(--ion-color-primary);
-  font-size: 1.7em;
+  font-size: 1.0em;
 
   width: 100%;
   padding: 3px 0;
@@ -12,6 +12,8 @@
 }
 
 .containerLarge {
-  flex-direction: column;
+  display: flex;
+  flex-direction: row;
+  font-size: 1.0em;
 }
 
