--- a/src/features/post/detail/Stats.module.css
+++ b/src/features/post/detail/Stats.module.css
@@ -8,3 +8,17 @@
   font-size: 0.8rem;
   color: var(--ion-color-text-aside);
 }
+
+.containerLarge {
+  width: 100%;
+  display: fles;
+  flex-direction: column;
+  font-size: 0.8rem;
+  color: var(--ion-color-text-aside);
+}
+
+.spacer {
+  height: 10px;
+}
+
+
